aligned and overlay overflow fix

--- a/style.css
+++ b/style.css
@@ -98,12 +98,9 @@ header .content{
     align-items: center;
     justify-content: center;
     padding: 0 2rem;
-    top: 7.7rem;
     height: 100%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5); 
     color: var(--text-white);
 }
 .l-heading{
@@ -123,6 +120,10 @@ header .content{
     background: var(--light-color);
     padding: 2rem;
 }
+.container{
+    width: 80%;
+    margin: 0 auto;
+}
 #what .items{
 display: block;
 margin: 2rem auto;
@@ -132,7 +133,13 @@ margin: 2rem auto;
     align-items: center;
     justify-content: center;
     gap: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2.5rem;
+}
+#what .items .item h3{
+    margin-bottom: 0.7rem;
+}
+.item p{
+    font-size: min(0.95rem, 100%);
 }
 #what .items .item div{
     width: 70%;
@@ -189,6 +196,9 @@ margin: 2rem auto;
         align-items: center;
         font-size: 1.8rem;
     }
+    .container{
+        width: 100%;
+    }
     #what .items{
         display: flex;
         width: 90%;
@@ -219,7 +229,7 @@ margin: 2rem auto;
     }
     #what .items .item div{
         text-align: left;
-        width: 60%;
+        width: 70%;
         display: flex;
         flex-direction: column;
         gap: 1rem;
